@@ -1,3 +1,7 @@
+drkns 30.06.2016 10:25:43 +0200 - build 4731
+
+1. Продолжение экспериментальных изменений в запускателе.
+
 drkns 29.06.2016 21:51:02 +0200 - build 4730
 
 1. Продолжение экспериментов:
